--- a/src/Login/login.html
+++ b/src/Login/login.html
@@ -11,10 +11,11 @@
 <div class="container">
     <!-- Formulario de Login -->
     <div class="form-container" id="loginForm">
+        <img src="Imagenes/logo.png" alt="logo" class="logo">
         <h2>Iniciar sesión</h2>
         <form id="loginForm">
             <label for="loginEmail">Email</label>
-            <input type="email" id="loginEmail" name="email" required>
+            <input type="email" id="loginEmail" name="email" required placeholder="usuario@ejemplo.com">
             
             <label for="loginPassword">Password</label>
             <input type="password" id="loginPassword" name="password" required>
