--- a/src/Login/login.html
+++ b/src/Login/login.html
@@ -18,7 +18,7 @@
             <input type="email" id="loginEmail" name="email" required placeholder="usuario@ejemplo.com">
             
             <label for="loginPassword">Password</label>
-            <input type="password" id="loginPassword" name="password" required>
+            <input type="password" id="loginPassword" name="password" required placeholder="*************">
             
             <button type="submit">Iniciar sesión</button>
         </form>
