Coreccion de errores

--- a/src/Main/index.html
+++ b/src/Main/index.html
@@ -6,6 +6,8 @@
     <title>Prueba_01_Gr#3</title>
 </head>
 <body>
-    
+    <h1>CONSUMO DE APIs PUBLICAS, MOSTRAR LA INFORMACION AL MOMENTO DE CONSUMIR LAS APIs PUBLICAS, DISEÑO Y ESTRUCTURA A SU DISCRECION
+        :)
+    </h1>
 </body>
 </html>
